# documentation

./: .gitignore  Makefile.am  README  autogen.sh  configure.ac
html/: bus1.css
skeleton/: .gitignore  COPYING  Makefile.am  README  configure.ac
skeleton/src/: skeleton.c  skeleton.h
src/: b1-peer.xml  b1_peer_new.xml  bootstrap.txt  bootup.txt  bus1-client.xml  bus1.css  bus1.xml  bus1_client_new_from_fd.xml  html.xsl  index.xml  org.bus1.activator.xml  org.bus1.administrator.xml  org.bus1.bootstrap.xml  org.bus1.bootup-example.xml  org.bus1.coredump.xml  org.bus1.devices.xml  org.bus1.diskctl.xml  org.bus1.init.xml  org.bus1.rdinit.xml  refname-list.xsl
